<resources>
    <string name="app_name">ShoeStore</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="prompt_email">Input Your Email</string>
    <string name="prompt_password">Input Your Password</string>
    <string name="action_login">Login</string>
    <string name="action_create">Create</string>
    <string name="welcome">"Welcome!"</string>
    <string name="instructions">Instructions</string>
    <string name="screen">Screen</string>
    <string name="shoes_list">Shoes List</string>
    <string name="add">Add</string>
    <string name="shoes_name">Name</string>
    <string name="prompt_shoes_name">Input shoes name</string>
    <string name="company">Company</string>
    <string name="prompt_company">Input your company</string>
    <string name="shoes_size">Shoes Size</string>
    <string name="prompt_shoes_size">Input shoes size</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="prompt_description">Input Description</string>
    <string name="logout">Log Out</string>
</resources>
