<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <!--    Simple layout, don't need to used ConstraintLayout here-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".screen.welcome.WelcomeFragment">

        <!--        title label-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <!--        subtitle label-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/screen"
            android:textColor="@android:color/holo_green_light"
            android:textSize="24sp" />

        <!--        Click this button go to shoes list screen-->
        <Button
            android:id="@+id/shoesListBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/shoes_list" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>