<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <variable
            name="viewModel"
            type="com.udacity.shoestore.models.ShoesViewModel" />
    </data>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="3dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/shoes_name"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/promptShoesName"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintHorizontal_weight="3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/promptShoesName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:minHeight="48dp"
                android:text="@={viewModel.shoesName}"
                android:textSize="14sp"
                app:layout_constraintBaseline_toBaselineOf="@id/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="7"
                app:layout_constraintStart_toEndOf="@id/name" />

            <TextView
                android:id="@+id/company"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/company"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/promptCompany"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintHorizontal_weight="3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name" />

            <TextView
                android:id="@+id/promptCompany"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:minHeight="48dp"
                android:text="@={viewModel.company}"
                android:textSize="14sp"
                app:layout_constraintBaseline_toBaselineOf="@id/company"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="7"
                app:layout_constraintStart_toEndOf="@id/company" />

            <TextView
                android:id="@+id/shoesSize"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/shoes_size"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/promptCompany"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintHorizontal_weight="3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/company" />

            <TextView
                android:id="@+id/promptShoesSize"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:minHeight="48dp"
                android:text="@={viewModel.shoesSize}"
                android:textSize="14sp"
                app:layout_constraintBaseline_toBaselineOf="@id/shoesSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="7"
                app:layout_constraintStart_toEndOf="@id/shoesSize" />

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/description"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/promptDescription"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintHorizontal_weight="3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shoesSize" />

            <TextView
                android:id="@+id/promptDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:minHeight="48dp"
                android:text="@={viewModel.description}"
                android:textSize="14sp"
                app:layout_constraintBaseline_toBaselineOf="@id/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="7"
                app:layout_constraintStart_toEndOf="@id/description" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</layout>